--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@lightningjs/blits-example-app",
   "version": "0.1.0",
-  "description": "Lightning 3 Bolt Example App",
+  "description": "Lightning 3 Blits Example App",
   "main": "index.js",
   "type": "module",
   "scripts": {
@@ -33,6 +33,6 @@
     "vite": "^4.0.4"
   },
   "dependencies": {
-    "@lightningjs/blits": "file:../blits"
+    "@lightningjs/blits": "^0.3.5"
   }
 }
