TMDB API related changes

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -18,6 +18,9 @@ jobs:
     - name: Install dependencies
       run: npm install
 
+    - name: Create .env file
+      run: cp .env.example .env
+
     - name: Build
       run: npm run build
 
