--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@lightningjs/blits-example-app",
-  "version": "0.3.4",
+  "version": "0.3.5",
   "description": "Lightning 3 Blits Example App",
   "main": "index.js",
   "type": "module",
@@ -9,7 +9,7 @@
     "lint": "eslint '**/*.js'",
     "lint:fix": "eslint '**/*.js' --fix",
     "build": "vite build",
-    "dev": "vite dev"
+    "dev": "vite dev --host"
   },
   "lint-staged": {
     "*.js": [
