--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -2,6 +2,6 @@
 	"recommendations": [
 		"editorconfig.editorconfig",
 		"dbaeumer.vscode-eslint",
-    "tobermory.es6-string-html"
+		"LightningJS.lightning-blits"
 	]
 }
