--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "husky": "^7.0.4",
     "lint-staged": "^12.3.3",
     "prettier": "^2.5.1",
+    "shaka-player": "^4.7.1",
     "vite": "^4.0.4"
   },
   "dependencies": {
