--- a/package.json
+++ b/package.json
@@ -6,11 +6,13 @@
   "type": "module",
   "scripts": {
     "start": "npm run dev",
+    "start:test": "NODE_ENV=testing npm run dev",
     "lint": "eslint '**/*.js'",
     "lint:fix": "eslint '**/*.js' --fix",
     "build": "vite build",
     "dev": "vite dev --host",
-    "postinstall": "npx playwright install"
+    "test": "backstop --config=backstop.cjs --docker test",
+    "postinstall": "npx playwright install chromium"
   },
   "lint-staged": {
     "*.js": [
