--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@lightningjs/blits-example-app",
-  "version": "0.7.0",
+  "version": "0.7.1",
   "description": "Lightning 3 Blits Example App",
   "main": "index.js",
   "type": "module",
@@ -11,7 +11,8 @@
     "lint:fix": "eslint '**/*.js' --fix",
     "build": "vite build",
     "dev": "vite dev --host",
-    "test": "node ./tests/scripts/run-tests.cjs"
+    "test": "NODE_ENV=testing backstop --config=backstop.cjs test",
+    "test:reference": "NODE_ENV=testing backstop --config=backstop.cjs reference"
   },
   "lint-staged": {
     "*.js": [
@@ -37,6 +38,6 @@
     "vite": "^4.0.4"
   },
   "dependencies": {
-    "@lightningjs/blits": "^0.7.4"
+    "@lightningjs/blits": "^0.8.0"
   }
 }
