--- a/package.json
+++ b/package.json
@@ -28,6 +28,8 @@
   "license": "Apache-2",
   "devDependencies": {
     "backstopjs": "^6.3.22",
+    "cypress": "^13.8.1",
+    "cypress-visual-regression": "^5.0.0",
     "eslint": "^8.8.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^4.0.0",
