--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
   "devDependencies": {
     "backstopjs": "^6.3.22",
     "cypress": "^13.8.1",
+    "cypress-mochawesome-reporter": "^3.8.2",
     "cypress-visual-regression": "^5.0.0",
     "eslint": "^8.8.0",
     "eslint-config-prettier": "^8.3.0",
