--- a/package.json
+++ b/package.json
@@ -29,11 +29,10 @@
   "devDependencies": {
     "backstopjs": "^6.3.22",
     "cypress": "^13.8.1",
+    "cypress-image-diff-js": "^2.1.4",
     "cypress-mochawesome-reporter": "^3.8.2",
-    "cypress-visual-regression": "^5.0.0",
     "eslint": "^8.8.0",
     "eslint-config-prettier": "^8.3.0",
-    "eslint-plugin-prettier": "^4.0.0",
     "husky": "^7.0.4",
     "lint-staged": "^12.3.3",
     "playwright": "^1.41.0",
