removed the extra vscode settings change pushed by mistake

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -7,6 +7,5 @@
       "source.fixAll.eslint": "explicit"
     },
     "js/ts.implicitProjectConfig.checkJs": true,
-    "js/ts.implicitProjectConfig.strictNullChecks": false,
-    "blits.format.printWidth": 120
+    "js/ts.implicitProjectConfig.strictNullChecks": false
   }
