Added command to launch the report after test run completed

--- a/package.json
+++ b/package.json
@@ -13,8 +13,8 @@
     "dev": "vite dev --host",
     "test": "NODE_ENV=testing backstop --config=backstop.cjs test",
     "test:reference": "NODE_ENV=testing backstop --config=backstop.cjs reference",
-    "test:cypress": "npx cypress run & npx cypress-image-diff-html-report start --autoOpen true &",
-    "test:cypress-headed": "npx cypress run --headed"
+    "test:cypress": "npx cypress run & npx cypress-image-diff-html-report start --autoOpen true",
+    "test:cypress-headed": "npx cypress run --headed & npx cypress-image-diff-html-report start --autoOpen true"
   },
   "lint-staged": {
     "*.js": [
