--- a/package.json
+++ b/package.json
@@ -6,13 +6,13 @@
   "type": "module",
   "scripts": {
     "start": "npm run dev",
-    "start:test": "NODE_ENV=testing npm run dev",
+    "start:test": "npm run setEnv & npm run dev",
     "lint": "eslint '**/*.js'",
     "lint:fix": "eslint '**/*.js' --fix",
     "build": "vite build",
     "dev": "vite dev --host",
-    "test": "NODE_ENV=testing backstop --config=backstop.cjs test",
-    "test:reference": "NODE_ENV=testing backstop --config=backstop.cjs reference"
+    "test": "npm run setEnv & npx backstop --config=backstop.cjs test",
+    "test:reference": "npm run setEnv & npx backstop --config=backstop.cjs reference"
   },
   "lint-staged": {
     "*.js": [
