--- a/package.json
+++ b/package.json
@@ -11,8 +11,8 @@
     "lint:fix": "eslint '**/*.js' --fix",
     "build": "vite build",
     "dev": "vite dev --host",
-    "test": "NODE_ENV=testing backstop --config=backstop.cjs test",
-    "test:reference": "NODE_ENV=testing backstop --config=backstop.cjs reference",
+    "test:backstopjs": "npm run setEnv & npx backstop --config=backstop.cjs test",
+    "test:backstopjs-reference": "npm run setEnv & npx backstop --config=backstop.cjs reference",
     "test:cypress": "npm run setEnv & npx cypress run & npx cypress-image-diff-html-report start --reportJsonDir tests/cypress/reports/cypress-image-diff-html-report --autoOpen true",
     "test:cypress-reference": "npm run setEnv & npm run remFolder & npx cypress run --headed",
     "test:cypress-headed": "npm run setEnv & npx cypress run --headed & npx cypress-image-diff-html-report start --reportJsonDir tests/cypress/reports/cypress-image-diff-html-report --autoOpen true",
