--- a/package.json
+++ b/package.json
@@ -39,6 +39,6 @@
     "vite": "^4.0.4"
   },
   "dependencies": {
-    "@lightningjs/blits": "github:lightning-js/blits#dev"
+    "@lightningjs/blits": "^1.4.0"
   }
 }
