--- a/package.json
+++ b/package.json
@@ -6,17 +6,16 @@
   "type": "module",
   "scripts": {
     "start": "npm run dev",
-    "start:test": "npm run setEnv & npm run dev",
+    "start:test": "cross-env NODE_ENV=testing npm run dev",
     "lint": "eslint '**/*.js'",
     "lint:fix": "eslint '**/*.js' --fix",
     "build": "vite build",
     "dev": "vite dev --host",
-    "test:backstopjs": "npm run setEnv & npx backstop --config=backstop.cjs test",
-    "test:backstopjs-reference": "npm run setEnv & npx backstop --config=backstop.cjs reference",
-    "test:cypress": "npm run setEnv & npx cypress run & npx cypress-image-diff-html-report start --reportJsonDir tests/cypress/reports/cypress-image-diff-html-report --autoOpen true",
-    "test:cypress-reference": "npm run setEnv & npm run remFolder & npx cypress run --headed",
-    "test:cypress-headed": "npm run setEnv & npx cypress run --headed & npx cypress-image-diff-html-report start --reportJsonDir tests/cypress/reports/cypress-image-diff-html-report --autoOpen true",
-    "setEnv" : "node ./scripts/env.js",
+    "test:backstopjs": "cross-env NODE_ENV=testing npx backstop --config=backstop.cjs test",
+    "test:backstopjs-reference": "cross-env NODE_ENV=testing npx backstop --config=backstop.cjs reference",
+    "test:cypress": "cross-env NODE_ENV=testing npx cypress run && npx cypress-image-diff-html-report start --reportJsonDir tests/cypress/reports/cypress-image-diff-html-report --autoOpen true",
+    "test:cypress-reference": "npm run remFolder && cross-env NODE_ENV=testing npx cypress run",
+    "test:cypress-headed": "cross-env NODE_ENV=testing npx cypress run --headed && npx cypress-image-diff-html-report start --reportJsonDir tests/cypress/reports/cypress-image-diff-html-report --autoOpen true",
     "remFolder" : "node ./scripts/removeReports.js"
   },
   "lint-staged": {
@@ -33,6 +32,7 @@
   "license": "Apache-2",
   "devDependencies": {
     "backstopjs": "^6.3.22",
+    "cross-env": "^7.0.3",
     "cypress": "^13.8.1",
     "cypress-image-diff-html-report": "^2.1.2",
     "cypress-image-diff-js": "^2.1.4",
