--- a/package.json
+++ b/package.json
@@ -40,6 +40,6 @@
   },
   "dependencies": {
     "@firebolt-js/sdk": "^1.4.1",
-    "@lightningjs/blits": "^1.25.1"
+    "@lightningjs/blits": "github:lightning-js/blits#feature/announcer-queue"
   }
 }
