Emit By Non Ref and Ref Example
Implemented an example screen to demonstrate how emit by refference and
emit by non refferent would work

Signed-off-by: Suresh Kumar Gangumalla <sureshkumar.gangumalla@invecas.com>

--- a/package.json
+++ b/package.json
@@ -40,6 +40,6 @@
   },
   "dependencies": {
     "@firebolt-js/sdk": "^1.4.1",
-    "@lightningjs/blits": "^1.27.0"
+    "@lightningjs/blits": "github:lightning-js/blits#dev"
   }
 }
