--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -15,6 +15,9 @@ jobs:
       with:
         node-version: '20'
 
+    - name: Delete package-lock.json
+      run: rm -f package-lock.json
+
     - name: Install dependencies
       run: npm install
 
