--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
   "author": "Michiel van der Geest <hello@michielvandergeest.com>",
   "license": "Apache-2",
   "devDependencies": {
+    "@lightningjs/msdf-generator": "^1.1.1",
     "@vitejs/plugin-legacy": "^6.1.1",
     "backstopjs": "^6.3.22",
     "eslint": "^8.8.0",
